--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 STRIPE_PUBLISHABLE_KEY=your_test_key_here
 STRIPE_SECRET_KEY=your_test_key_here
-USERNAME=your_unsername
-PASSWORD=your_password 
+ADMIN_USERNAME=your_unsername
+ADMIN_PASSWORD=your_password 
